--- a/keylogger.ipynb
+++ b/keylogger.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pynput\n",
-    "from pynput.keyboard import Key, d"
+    "from pynput.keyboard import Key, Listener"
    ]
   },
   {
