--- a/send_email.ipynb
+++ b/send_email.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from_addr = \"testsmtplib.123@outlook.com\"\n",
     "to_addr = \"buitien747@gmail.com\"\n",
-    "smtp_srv = \"smtp.live.com\""
+    "# smtp_srv = \"smtp.live.com\""
    ]
   },
   {
@@ -78,10 +78,20 @@
     "\n",
     "    # connect to the server and send the email\n",
     "    with smtplib.SMTP('smtp-mail.outlook.com', 587) as connection:\n",
+    "        connection.ehlo()\n",
     "        connection.starttls() \n",
+    "        connection.ehlo()\n",
     "        connection.login(user=user, password=passwd)\n",
-    "        connection.sendmail(from_addr=from_addr, to_addrs=to_addr, msg=msg.as_string())\n"
+    "        connection.sendmail(from_addr=from_addr, to_addrs=to_addr, msg=msg.as_string())\n",
+    "        connection.quit()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
